fix: prevent logo from overlapping sidebar navigation

--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -47,10 +47,11 @@ h2 {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
+}
 
-  z-index: 1;
-  position: relative;
-  margin-top: 150px;
+.bottom-fixed {
+  position: absolute;
+  bottom: 0px;
 }
 
 .navbar-header {
